--- a/package.json
+++ b/package.json
@@ -35,27 +35,27 @@
   },
   "devDependencies": {
     "@types/three": "^0.131.0",
-    "expo": "^42.0.3",
-    "expo-gl": "^10.4.2",
+    "expo": "^44.0.0",
+    "expo-gl": "~11.1.1",
     "expo-three": "^5.7.0",
     "expo-module-scripts": "~2.0.0",
-    "jest": "^25.1.0",
-    "jest-expo": "~42.1.0",
-    "react": "~16.13.1",
-    "react-dom": "~16.13.1",
-    "react-native": "~0.63.4",
-    "react-native-web": "~0.13.12",
+    "jest": "^26.6.3",
+    "jest-expo": "^44.0.0",
+    "react": "~17.0.1",
+    "react-dom": "~17.0.1",
+    "react-native": "~0.64.3",
+    "react-native-web": "~0.17.1",
     "three": "^0.132.2",
-    "eslint": "^6.8.0",
-    "prettier": "^1.19.1"
+    "eslint": "^8.4.1",
+    "prettier": "^2.5.1"
   },
   "peerDependencies": {
-    "expo": "^42.0.3",
-    "expo-gl": "^10.4.2",
-    "react": "~16.13.1",
-    "react-dom": "~16.13.1",
-    "react-native": "~0.63.4",
-    "react-native-web": "~0.13.12",
+    "expo": "^44.0.0",
+    "expo-gl": "~11.1.1",
+    "react": "~17.0.1",
+    "react-dom": "~17.0.1",
+    "react-native": "~0.64.3",
+    "react-native-web": "~0.17.1",
     "three": "^0.132.2"
   },
   "dependencies": {
