--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@types/three": "^0.131.0",
     "expo": "^44.0.0",
     "expo-gl": "~11.1.1",
-    "expo-three": "^5.7.0",
+    "expo-three": "NikitaDudin/expo-three.git#expo-44-tmp",
     "expo-module-scripts": "~2.0.0",
     "jest": "^26.6.3",
     "jest-expo": "^44.0.0",
