--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "jest-expo": "^37.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "https://github.com/expo/react-native/archive/unstable/sdk-37.tar.gz",
+    "react-native": "0.64.3",
     "react-native-web": "^0.11",
     "three": "^0.108.0",
     "eslint": "^6.8.0",
@@ -54,7 +54,7 @@
     "expo-gl": "^11.0.0",
     "react": "~17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "~0.61",
+    "react-native": "0.64.3",
     "react-native-web": "^0.11",
     "three": "^0.128.0"
   },
