--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "^0.11",
+    "react-native-web": "0.17.5",
     "three": "^0.108.0",
     "eslint": "^6.8.0",
     "prettier": "^1.19.1"
@@ -55,7 +55,7 @@
     "react": "~17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "^0.11",
+    "react-native-web": "0.17.5",
     "three": "^0.128.0"
   },
   "dependencies": {
