--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "url": "git@github.com:EvanBacon/expo-three-orbit-controls.git"
   },
   "devDependencies": {
+    "@types/three": "^0.132.2",
     "eslint": "^6.8.0",
     "expo": "44.0.5",
     "expo-gl": "^11.0.0",
